# RPC_demo

./: .gitignore  README.md  howto.md
cpp/: CMakeLists.txt  build.sh  inference.grpc.pb.cc  inference.grpc.pb.h  inference.pb.cc  inference.pb.h  server  server.cpp
proto/: inference.proto
python/: client.py  inference_pb2.py  inference_pb2_grpc.py
